@@ -1,11 +1,16 @@
 2008-06-09  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/dependency_installer.rb:  Only install all dependencies
-	when install_dir option is set.
+	when install_dir option is set.  Don't include satisfied dependencies
+	when gathering dependencies.
 	* lib/rubygems/commands/query_command.rb:  Display authors, rubyforge
 	and homepage urls with details.
 	* lib/rubygems/commands/environment_command.rb:  Add executable
 	directory (from Rubinius).
+	* lib/rubygems/commands/install_command.rb:  Don't set install_dir by
+	default.
+	* lib/rubygems/commands/update_command.rb:  Don't set install_dir by
+	default.  Use #find_missing for efficiency.
 
 2008-06-07  Eric Hodel  <drbrain@segment7.net>
 
